# playrs

./: Cargo.toml  README.md  build.rs  oauthgetter.rs  rustfmt.toml
res/devices/: advan_g3_pro.properties  bravia_atv2.properties  bravia_vu2.properties  fairphone_2.properties  fairphone_3.properties  google_pixel_3a.properties  google_pixel_5a.properties  google_pixel_7_graphene.properties  google_pixel_7a.properties  google_pixel_8_graphene.properties  google_pixel_9_pro_fold.properties  google_pixel_9a.properties  google_pixel_tablet.properties  google_play_pc.properties  huawei_honor_9.properties  huawei_mate_20.properties  mobvoi_ticwatch_e.properties  motorola_moto_g5.properties  nextbook_ares_8.properties  nokia_8.properties  nokia_9.properties  nokia_drax.properties  nothing_p1.properties  oneplus_3.properties  oneplus_5.properties  oneplus_5t.properties  oneplus_6.properties  oneplus_7t.properties  oneplus_7t_pro.properties  oneplus_8_pro.properties  oneplus_x.properties  oppo_r17.properties  samsung_a02s.properties  samsung_a3.properties  samsung_a6.properties  samsung_f34_5g.properties  samsung_feel.properties  samsung_j5_prime.properties  samsung_s20_plus.properties  samsung_s20_ultra.properties  (+22 more)
res/protos/: AcquireApp.proto  GooglePlay.proto
src/: auth.rs  constants.rs  device.rs  error.rs  http.rs  lib.rs  main.rs  playproto.rs
