[package]
name = "playrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
const_format = "0.2.35"
include_dir = "0.7.4"
indexmap = { version = "2.13.0", features = ["serde"] }
java-properties = "2.0.0"
prost = "0.14.3"
rand = "0.10.0"
reqwest = { version = "0.13", features = ["form", "query", "json", "multipart",] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zip = "8.3.1"

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
